--- a/configs/cam11.yaml
+++ b/configs/cam11.yaml
@@ -2,15 +2,15 @@ CAM:
   NAME: "CAM_11"
   NUMBER_MOI: 2
   ROI_BTC: [[250, 586], [430, 359], [800, 362], [982, 574]]
-  ROI_DEFAULT: [[278,550], [430, 359], [800, 362],[947,532]]
+  ROI_DEFAULT: [[295,527], [430, 359],[594,358],[603,394], [828,392], [982, 574],[661,576],[638,523]]
   TRACKING_ROI: [[250, 586], [430, 359],[600,359],[595,315],[777,310], [800, 362], [982, 574],[814,571],[825,716],[218,720]]
   MOI1: [[542, 349], [471, 622]]
   MOI2: [[785, 620], [655, 341]]
   MOI: [[[542, 349], [471, 622]], [[785, 620], [655, 341]]]
 
-  LINE1: [[334,488], [620,482]]
-  LINE2: [[634,412], [844,414]]
-  LINE: [[[334,488], [620,482]],[[634,412], [844,414]]]
+  LINE1: [[306,509], [615,505]]
+  LINE2: [[844,409], [604,411]]
+  LINE: [[[306,509], [615,505]],[[844,409], [604,411]]]
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
   _STD_WEIGHT_VELOCITY: 100         # inverse of _std_weight_velocity
