--- a/configs/cam8.yaml
+++ b/configs/cam8.yaml
@@ -1,17 +1,17 @@
 CAM:
   NAME: "CAM_08"
   NUMBER_MOI: 2
-
+  
   ROI_BTC: [[20,433],[324,219],[968,226],[1270,452]]
-  ROI_DEFAULT: [[83,390], [322, 218], [968, 224], [1266, 448],[609,445],[612,392]]
+  ROI_DEFAULT: [[128,363], [322, 218],[632,219],[630,265], [1022,265], [1266, 448],[609,445],[621,369]]
   TRACKING_ROI: [[19, 431], [322, 218],[627,218],[640,150],[930,152], [968, 224], [1266, 448],[623,443],[615,720],[7,720]]
   MOI1: [[491, 197], [308, 478]]
   MOI2: [[961, 480], [784, 204]]
   MOI: [[[491, 197], [308, 478]], [[961, 480], [784, 204]]]
 
-  LINE1: [[175,318], [620,330]]
-  LINE2: [[634,265], [1025,266]]
-  LINE: [[[175,318], [620,330]], [[634,265], [1025,266]]]
+  LINE1: [[157,323], [625,338]]
+  LINE2: [[640,288], [1051,284]]
+  LINE: [ [[157,335], [625,345]], [[640,288], [1051,284]]]
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
   _STD_WEIGHT_VELOCITY: 100         # inverse of _std_weight_velocity
@@ -24,3 +24,4 @@ CAM:
   FRAME_MOI1: 2
   FRAME_MOI2: 0
   FRAME_MOI: [2,0]
+  
