--- a/configs/cam6.yaml
+++ b/configs/cam6.yaml
@@ -1,16 +1,16 @@
 CAM:
   NAME: "CAM_06"
   NUMBER_MOI: 2
-  ROI_BTC:[[7,441],[439,150],[812,153],[1225,465]]
-  ROI_DEFAULT: [[7,441],[355,207],[889,211],[1225,465]]
+  ROI_BTC: [[7,441],[439,150],[812,153],[1225,465]]
+  ROI_DEFAULT: [[106,373],[355,207],[889,211],[1225,465],[629,450],[623,387]]
   TRACKING_ROI: [[10, 437], [437, 150],[630,170],[633,133],[781,134], [810, 150], [1223, 464],[631,451],[625,720],[6,720]]
   MOI1: [[549, 144], [297, 505]]
   MOI2: [[925, 487], [715, 144]]
   MOI: [[[549, 144], [297, 505]], [[925, 487], [715, 144]]]
 
-  LINE1: [[97,383], [624,393]]
+  LINE1: [[138,350], [630,360]]
   LINE2: [[637,242],[928,241]]
-  LINE: [[[97,383], [624,393]], [[637,242],[928,241]]]
+  LINE: [[[138,350], [630,360]], [[637,242],[928,241]]]
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
   _STD_WEIGHT_VELOCITY: 100         # inverse of _std_weight_velocity
