--- a/configs/cam12.yaml
+++ b/configs/cam12.yaml
@@ -1,13 +1,13 @@
 CAM:
   NAME: "CAM_12"
   NUMBER_MOI: 1
-  ROI_BTC: [[134, 596], [650, 355], [1211, 431], [1199, 719]
-  ROI_DEFAULT: [[134, 596], [586,362], [1200, 451], [1199, 719]]
-  TRACKING_ROI: [[134, 596], [652, 302], [1215, 379],[1199, 719]]
+  ROI_BTC: [[134, 596], [650, 355], [1211, 431], [1199, 719]]
+  ROI_DEFAULT: [[134, 596], [538,381], [1200, 486], [1199, 719]]
+  TRACKING_ROI : [[134, 596], [652, 302], [1215, 379],[1199, 719]]
   MOI1: [[615, 706], [850, 368]]
   MOI: [[[615, 706], [850, 368]]]
-  LINE1: [[550,380], [1200, 479]]
-  LINE: [[[550,380], [1200, 479]]]
+  LINE1: [[521,398], [1200, 506]]
+  LINE: [[[521,398], [1200, 506]]]
   
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
