--- a/configs/cam13.yaml
+++ b/configs/cam13.yaml
@@ -2,15 +2,15 @@ CAM:
   NAME: "CAM_13"
   NUMBER_MOI: 2
   ROI_BTC: [[8, 339], [341, 166], [1008, 169], [1272, 312]]
-  ROI_DEFAULT: [[8, 339], [341, 166], [1008, 169], [1272, 312]]
+  ROI_DEFAULT: [[122,279], [341, 166], [643,165],[651,198],[1052,191], [1272, 312],[638,327],[639,273]]
   TRACKING_ROI: [[8, 339], [341, 166],[647,167],[649,120],[963,123], [1008, 169], [1272, 312],[641,328],[632,485],[8,509]]
   MOI1: [[521, 152], [305, 371]]
   MOI2: [[980, 342], [808, 157]]
   MOI: [[[521, 152], [305, 371]], [[980, 342], [808, 157]]]
 
-  LINE1: [[120,285], [633,277]]
-  LINE2: [[648,223], [1075,203]]
-  LINE: [[[120,285], [633,277]], [[648,223], [1075,203]]]
+  LINE1: [[150,263], [643,253]]
+  LINE2: [[655,214], [1071,203]]
+  LINE: [[[150,263], [643,253]],[[655,214], [1071,203]]]
 
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
