--- a/configs/cam19.yaml
+++ b/configs/cam19.yaml
@@ -2,16 +2,15 @@ CAM:
   NAME: "CAM_19"
   NUMBER_MOI: 2
   ROI_BTC: [[131, 307], [605, 148], [941, 249], [885, 691]]
-  ROI_DEFAULT: [[281,256],[540,180],[931,316], [885, 691],[441,465],[543,381]]
+  ROI_DEFAULT: [[256,260], [605, 148], [751,192],[707,231],[932,310], [885, 691],[444,466],[522,386]]
   TRACKING_ROI: [[54, 344], [540,180], [711,246], [810,167], [916,197], [941,249],[885,691],[414,451],[341,508]]
   MOI1: [[731,168],[205,424]]
   MOI2: [[526,566],[842,199]]
   MOI: [[[731,168],[205,424]],[[526,566],[842,199]]]
 
-
-  LINE1: [[367,225], [588,328]]
-  LINE2: [[667,300], [917,401]]
-  LINE: [[[367,225], [588,328]], [[667,300], [917,401]]]
+  LINE1: [[280,254], [535,373]]
+  LINE2: [[931,326], [704,244]]
+  LINE: [[[280,254], [535,373]],[[931,326], [704,244]]]
 
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
@@ -21,8 +20,9 @@ CAM:
   MAX_IOU_DISTANCE: 0.85
   MAX_AGE: 3
   N_INIT: 1
-  THRESHOLD_AREA: 0.4
 
+  # for counting base on area intersect
+  THRESHOLD_AREA: 0.35
   #MOI2 +5 MOi2 +2
   FRAME_MOI1: 5
   FRAME_MOI2: 2
