--- a/configs/cam24.yaml
+++ b/configs/cam24.yaml
@@ -2,15 +2,15 @@ CAM:
     NAME: "CAM_24"
     NUMBER_MOI: 2
     ROI_BTC: [[207, 418], [803, 283], [1153, 368], [1090, 690]]
-    ROI_DEFAULT: [[207, 418], [744,296], [1147, 400], [1090, 690]]
+    ROI_DEFAULT: [[365,379], [728,294], [1144, 407], [1105,598]]
     TRACKING_ROI: [[207, 418], [803, 283],[961,321],[1005,277],[1158,308], [1153, 368], [1090, 690],[583,536],[250,720],[0,720],[2,492]]
     MOI1: [[922, 309], [309, 503]]
     MOI2: [[813,  628], [1057, 330]]
     MOI: [[[922, 309], [309, 503]],[[813,  628], [1057, 330]] ]
 
-    LINE1: [[490,351], [701,444]]
-    LINE2: [[829,390], [1131,465]]
-    LINE: [[[490,351], [701,444]],[[829,390], [1131,465]]]
+    LINE1: [[389,373], [693,464]]
+    LINE2: [[904,359], [1143,422]]
+    LINE: [[[389,373], [693,464]],[[904,359], [1143,422]]]
     
     # for kalman filter - kalman_filter.py
     _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
