--- a/configs/cam14.yaml
+++ b/configs/cam14.yaml
@@ -2,7 +2,7 @@ CAM:
   NAME: "CAM_14"
   NUMBER_MOI: 6
   ROI_BTC: [[11, 461], [306, 213], [950, 180], [1272, 417]]
-  ROI_DEFAULT: [[11, 461], [306, 213], [950, 180], [1272, 417]]
+  ROI_DEFAULT: [[11, 461], [259,253],, [950, 180], [1272, 417]]
   TRACKING_ROI: [[3, 442], [313, 170], [991, 124],[1276, 333], [1277, 557], [1, 720]]
   MOI1: [[424, 201], [274, 485]]
   MOI2: [[827, 508], [628, 178]]
