--- a/configs/cam17.yaml
+++ b/configs/cam17.yaml
@@ -2,7 +2,7 @@ CAM:
   NAME: "CAM_17"
   NUMBER_MOI: 3
   ROI_BTC: [[46, 190], [521, 144], [1156, 454], [128, 636]]
-  ROI_DEFAULT: [[46, 190], [521, 144], [1156, 454], [128, 636]]
+  ROI_DEFAULT: [[110,523], [72,309],[273,288],[159,181],[443,154],[593,241],[656,212],[1014,388]]
   TRACKING_ROI: [[2, 165], [561, 108], [1278, 371],[1278, 720], [202, 719]]
   MOI1: [[155,166],[596,621]]
   MOI2: [[221,162],[679,209]]
@@ -13,7 +13,7 @@ CAM:
   LINE2: [[381,158], [370,216]]
   LINE3: [[682, 249], [976, 400]]
   LINE: [[[92,444], [674,329]],[[381,158], [370,216]],[[682, 249], [976, 400]]]
-
+  
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
   _STD_WEIGHT_VELOCITY: 100         # inverse of _std_weight_velocity
