--- a/configs/cam20.yaml
+++ b/configs/cam20.yaml
@@ -2,7 +2,7 @@ CAM:
   NAME: "CAM_20"
   NUMBER_MOI: 6
   ROI_BTC: [[73, 212], [760, 145], [1240, 293], [533, 686]]
-  ROI_DEFAULT: [[73, 212], [760, 145], [1240, 293], [533, 686]]
+  ROI_DEFAULT: [[186,197],[360,183], [554,264], [866,179],[1149,262],[533, 686]]
   TRACKING_ROI: [[3, 116], [761, 107], [1273, 240],[1276, 393], [825, 716], [319, 716], [4, 344]]
   MOI1: [[336  ,173],[1149 ,515 ]]
   MOI2: [[1230 ,380],[498 ,147  ]]
@@ -12,13 +12,13 @@ CAM:
   MOI6: [[127,438],[1184,448]]
   MOI: [[[336  ,173],[1149 ,515 ]],[[1230 ,380],[498 ,147  ]],[[1226 ,396],[51,384  ]],[[356,170],[62,405]],[[121,424],[485,151]],[[127,438],[1184,448]]]
 
-  LINE1: [[568, 310], [699, 232]]
-  LINE2: [[602, 197], [730, 147]]
-  LINE3: [[637, 426], [623, 305]]
-  LINE4: [[124, 208], [325,300]]
-  LINE5: [[320, 297], [540, 302]]
-  LINE6: [[578, 416], [555, 675]]
-  LINE: [[[568, 310], [699, 232]], [[602, 197], [730, 147]], [[637, 426], [623, 305]], [[124, 208], [325,300]], [[320, 297], [540, 302]], [[578, 416], [555, 675]]]
+  LINE1: [[586,314],[762,275 ]]
+  LINE2: [[717,242],[885,185  ]]
+  LINE3: [[312,338],[422,473  ]]
+  LINE4: [[214,196],[278,289]]
+  LINE5: [[374,200],[495,254]]
+  LINE6: [[730,418],[533, 686]]
+  LINE: [[[586,314],[762,275 ]],[[717,242],[885,185  ]],[[312,338],[422,473  ]],[[214,196],[278,289]],[[374,200],[495,254]],[[730,418],[533, 686]],]
 
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
