--- a/configs/cam21.yaml
+++ b/configs/cam21.yaml
@@ -2,7 +2,7 @@ CAM:
   NAME: "CAM_21"
   NUMBER_MOI: 6
   ROI_BTC: [[6, 389], [440, 211], [814, 252], [830, 661]]
-  ROI_DEFAULT: [[6, 389], [440, 211], [814, 252], [830, 661],[185,450],[4,508]]
+  ROI_DEFAULT: [[36, 395], [440, 211], [816,342], [824,527]]
   TRACKING_ROI: [[2, 242], [456, 150], [819, 189],[842, 716], [437, 716], [1, 720]]
   MOI1: [[602,204],[159,497]]
   MOI2: [[526,591 ],[719 ,214 ]]
@@ -12,14 +12,13 @@ CAM:
   MOI6: [[484 ,591 ],[66 ,322 ]]
   MOI: [[[602,204],[159,497]], [[526,591 ],[719 ,214 ]],[[567 ,207 ],[25 ,338 ]],[[33 ,337 ],[722, 231 ]],[[62, 320 ],[68,494  ]],[[484 ,591 ],[66 ,322 ]]]
 
-  LINE1: [[95,363], [291,477]]
-  LINE2: [[598,272], [823,334]]
-  LINE3: [[386,231], [357,300]]
-  LINE4: [[621, 228], [510, 342]]
-  LINE5: [[12, 417], [118, 417]]
-  LINE6: [[448, 393], [280, 609]]
-  LINE: [[[95,363], [291,477]], [[598,272], [823,334]], [[386,231], [357,300]], [[621, 228], [510, 342]], [[12, 417], [118, 417]], [[448, 393], [280, 609]]]
-
+  LINE1: [[277,345], [461,397]]
+  LINE2: [[578,286], [822,379]]
+  LINE3: [[440, 211], [370,267]]
+  LINE4: [[423,260], [276,330]]
+  LINE5: [[18, 396], [107, 381]]
+  LINE6: [[108,367], [223,323]]
+  LINE: [[[277,345], [461,397]], [[578,286], [822,379]], [[440, 211], [370,267]],[[423,260], [276,330]],[[18, 396], [107, 381]],[[108,367], [223,323]]]
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
   _STD_WEIGHT_VELOCITY: 100         # inverse of _std_weight_velocity
