--- a/configs/cam5.yaml
+++ b/configs/cam5.yaml
@@ -24,5 +24,5 @@ CAM:
     THRESHOLD_AREA: 0.6
 
     FRAME_MOI1: 4
-    FRAME_MOI2: 34
-    FRAME_MOI: [4,34]
+    FRAME_MOI2: 29
+    FRAME_MOI: [4, 29]
