config cam10, add count cam 1

--- a/configs/cam10.yaml
+++ b/configs/cam10.yaml
@@ -1,8 +1,8 @@
 CAM:
   NAME: "CAM_10"
   NUMBER_MOI: 12
-  ROI_BTC: [[1, 657], [312, 258], [985, 255], [1277, 505], [1279, 660]]
-  ROI_DEFAULT: [[1, 657], [80,551],[4,549],[5,378],[203,390],[357,200],[634,197],[646,253],[985, 255],[1277, 505], [1279, 660]]
+  ROI_BTC: [[1, 657], [80,551],[4,549],[5,378],[203,390],[357,200],[634,197],[646,253],[985, 255],[1277, 505], [1279, 660]]
+  ROI_DEFAULT: [[80,551],[332,254],[646,253],[653,316],[988,297],[1270,613]]
   TRACKING_ROI: [[1, 715], [1, 501], [302, 202], [992, 207],[1278, 435], [1276, 715]]
   MOI1: [[491, 244], [355, 678]]
   MOI2: [[969, 674], [754, 236]]
@@ -17,22 +17,20 @@ CAM:
   MOI11: [[1164, 370], [179, 335]]
   MOI12: [[1165, 397], [375, 693]]
   MOI: [[[491, 244], [355, 678]], [[969, 674], [754, 236]], [[455, 238], [193, 325]], [[59, 532], [732, 241]], [[936, 675], [171, 349]], [[77, 499], [214, 697]], [[998, 679], [1178, 394]], [[55, 510], [1178, 388]], [[1147, 365], [775, 243]], [[533, 238], [1156, 381]], [[1164, 370], [179, 335]], [[1165, 397], [375, 693]]]
-  
-  LINE1: [[185, 632], [549, 631]]
-  LINE2: [[690, 267], [895, 266]]
-  LINE3: [[293, 225], [353, 320]]
-  LINE4: [[608, 263], [665, 313]]
-  LINE5: [[800, 580], [685, 696]]
-  LINE6: [[3, 654], [218, 575]]
-  LINE7: [[1091, 419], [1210, 470]]
-  LINE8: [[654, 398], [676, 499]]
-  LINE9: [[914, 318], [975, 275]]
-  LINE10: [[603, 283], [639, 227]]
-  LINE11: [[681, 303], [694, 400]]
-  LINE12: [[675, 513], [768, 590]]
-
-  LINE: [[[185, 632], [549, 631]],[[690, 267], [895, 266]],[[293, 225], [353, 320]],[[608, 263], [665, 313]],[[800, 580], [685, 696]],[[3, 654], [218, 575]],[[1091, 419], [1210, 470]],[[654, 398], [676, 499]],[[914, 318], [975, 275]],[[603, 283], [639, 227]],[[681, 303], [694, 400]],[[675, 513], [768, 590]]]
-  # for kalman filter - kalman_filter.py
+  LINE1: [[175,531],[656,558]]
+  LINE2: [[739,1272],[1274,646]]
+  LINE3: [[33,227],[329,341]]
+  LINE4: [[214,408],[300,519]]
+  LINE5: [[419,347],[207,395]]
+  LINE6: [[14,654],[196,454]]
+  LINE7: [[972,463],[1268,607]]
+  LINE8: [[746,376],[834,499]]
+  LINE9: [[99,351],[1040,266]]
+  LINE10: [[1069,321],[932,416]]
+  LINE11: [[656,291],[663,428]]
+  LINE12: [[598,471],[946,619]]
+  LINE: [[[175,531],[656,558]],[[739,1272],[1274,646]],[[33,227],[329,341]],[[214,408],[300,519]], [[419,347],[207,395]],[[14,654],[196,454]],[[972,463],[1268,607]], [[746,376],[834,499]],[[99,351],[1040,266]], [[1069,321],[932,416]], [[656,291],[663,428]],[[598,471],[946,619]]]
+    # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
   _STD_WEIGHT_VELOCITY: 100         # inverse of _std_weight_velocity
   # config for tracker - tracker.py
