--- a/configs/cam14.yaml
+++ b/configs/cam14.yaml
@@ -1,8 +1,8 @@
 CAM:
   NAME: "CAM_14"
   NUMBER_MOI: 6
-  ROI_BTC: [[11, 461], [306, 213], [950, 180], [1272, 417]]
-  ROI_DEFAULT: [[11, 461], [259,253],, [950, 180], [1272, 417]]
+  ROI_BTC: [[11, 461], [306, 213], [950, 180], [1272, 417],[1249,512],[1025,521],[1022,426]]
+  ROI_DEFAULT: [[11, 461], [306, 213],[529,203],[543,251],[806,228],[788,185], [950, 180], [1272, 417]]
   TRACKING_ROI: [[3, 442], [313, 170], [991, 124],[1276, 333], [1277, 557], [1, 720]]
   MOI1: [[424, 201], [274, 485]]
   MOI2: [[827, 508], [628, 178]]
@@ -15,10 +15,10 @@ CAM:
   LINE1: [[70, 421], [552, 406]]
   LINE2: [[555, 317], [932, 285]]
   LINE3: [[906, 185], [871, 250]]
-  LINE4: [[565, 350], [595, 630]]
-  LINE5: [[1111, 303], [1276, 388]]
-  LINE6: [[537, 160], [553, 290]]
-  LINE: [[[70, 421], [552, 406]],[[555, 317], [932, 285]],[[906, 185], [871, 250]],[[565, 350], [595, 630]],[[1111, 303], [1276, 388]],[[537, 160], [553, 290]]]
+  LINE4: [[553,325], [936,425]]
+  LINE5: [[1080,287], [1258, 452]]
+  LINE6: [[522,203], [550, 326]]
+  LINE: [[[70, 421], [552, 406]],[[555, 317], [932, 285]],[[906, 185], [871, 250]],[[553,325], [936,425]],[[1080,287], [1258, 452]],[[522,203], [550, 326]]]
 
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
