--- a/configs/cam22.yaml
+++ b/configs/cam22.yaml
@@ -1,11 +1,11 @@
 CAM:
   NAME: "CAM_22"
   NUMBER_MOI: 6
-  ROI_BTC: [[6, 389], [440, 211], [814, 252], [830, 661]]
-  ROI_DEFAULT: [[36, 395], [440, 211], [816,342], [824,527]]
+  ROI_BTC: [[102,346], [440, 211], [814, 252], [830, 661],[75,410],[6,429],[2,344],[73,325]]
+  ROI_DEFAULT: [[6, 389], [440, 211], [634,229],[560,292],[818,354], [830, 661]]
   TRACKING_ROI: [[2, 242], [456, 150], [819, 189],[842, 716], [437, 716], [1, 720]]
   MOI1: [[602,204],[159,497]]
-  MOI2: [[526,591 ],[719 ,214 ]]
+  MOI2: [[552,313 ],[821,370 ]]
   MOI3: [[567 ,207 ],[25 ,338 ]]
   MOI4: [[33 ,337 ],[722, 231 ]]
   MOI5: [[62, 320 ],[68,494  ]]
@@ -14,11 +14,11 @@ CAM:
 
   LINE1: [[277,345], [461,397]]
   LINE2: [[578,286], [822,379]]
-  LINE3: [[440, 211], [370,267]]
-  LINE4: [[423,260], [276,330]]
-  LINE5: [[18, 396], [107, 381]]
+  LINE3: [[377,233], [324,283]]
+  LINE4: [[605,225 ],[503,329 ]]
+  LINE5: [[1, 396], [107, 381]]
   LINE6: [[108,367], [223,323]]
-  LINE: [[[277,345], [461,397]], [[578,286], [822,379]], [[440, 211], [370,267]],[[423,260], [276,330]],[[18, 396], [107, 381]],[[108,367], [223,323]]]
+  LINE: [[[277,345], [461,397]], [[552,313 ],[821,370 ]], [[377,233], [324,283]],[[605,225 ],[503,329 ]],[[1 , 396], [107, 381]],[[108,367], [223,323]]]
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
   _STD_WEIGHT_VELOCITY: 100         # inverse of _std_weight_velocity
