--- a/configs/cam10.yaml
+++ b/configs/cam10.yaml
@@ -2,7 +2,7 @@ CAM:
   NAME: "CAM_10"
   NUMBER_MOI: 12
   ROI_BTC: [[1, 657], [80,551],[4,549],[5,378],[203,390],[357,200],[634,197],[646,253],[985, 255],[1277, 505], [1279, 660]]
-  ROI_DEFAULT: [[80,551],[332,254],[329,196],[410,208],[400,255],[646,253],[653,316],[988,297],[1270,613]]
+  ROI_DEFAULT: [[1, 657],[332,254],[329,196],[410,208],[400,255],[646,253],[653,316],[988,297],[1270,613]]
   TRACKING_ROI: [[1, 715], [1, 501], [302, 202], [992, 207],[1278, 435], [1276, 715]]
   MOI1: [[491, 244], [355, 678]]
   MOI2: [[969, 674], [754, 236]]
