--- a/configs/cam10.yaml
+++ b/configs/cam10.yaml
@@ -2,7 +2,7 @@ CAM:
   NAME: "CAM_10"
   NUMBER_MOI: 12
   ROI_BTC: [[1, 657], [80,551],[4,549],[5,378],[203,390],[357,200],[634,197],[646,253],[985, 255],[1277, 505], [1279, 660]]
-  ROI_DEFAULT: [[80,551],[332,254],[329,196],[410,208],[400,255],[646,253],[653,316],[988,297],[1270,613]]
+  ROI_DEFAULT: [[1, 657],[332,254],[329,196],[410,208],[400,255],[646,253],[653,316],[988,297],[1270,613]]
   TRACKING_ROI: [[1, 715], [1, 501], [302, 202], [992, 207],[1278, 435], [1276, 715]]
   MOI1: [[491, 244], [355, 678]]
   MOI2: [[969, 674], [754, 236]]
@@ -42,15 +42,15 @@ CAM:
   N_INIT: 1
   THRESHOLD_AREA: 0.4
   FRAME_MOI1: 6
-  FRAME_MOI2 : 18
+  FRAME_MOI2 : 24
   FRAME_MOI3 : 5
-  FRAME_MOI4 : 13
-  FRAME_MOI5 : 4
-  FRAME_MOI6 : 8
-  FRAME_MOI7 : 6
-  FRAME_MOI8 : 6 
-  FRAME_MOI9 : 20
-  FRAME_MOI10 : 6
-  FRAME_MOI11 : 3
-  FRAME_MOI12 : 6 
-  FRAME_MOI : [6,18,5,13,4,8,6,6,20,6,3,6]
+  FRAME_MOI4 : 17
+  FRAME_MOI5 : 6
+  FRAME_MOI6 : 6
+  FRAME_MOI7 : 14
+  FRAME_MOI8 : 8
+  FRAME_MOI9 : 25
+  FRAME_MOI10 : 12
+  FRAME_MOI11 : 5
+  FRAME_MOI12 : 5 
+  FRAME_MOI : [6,24,5,17,6,6,14,8,25,12,5,5]
