--- a/configs/cam22.yaml
+++ b/configs/cam22.yaml
@@ -2,7 +2,7 @@ CAM:
   NAME: "CAM_22"
   NUMBER_MOI: 6
   ROI_BTC: [[102,346], [440, 211], [814, 252], [830, 661],[75,410],[6,429],[2,344],[73,325]]
-  ROI_DEFAULT: [[6, 389], [440, 211], [634,229],[560,292],[818,354], [830, 661]]
+  ROI_DEFAULT: [[6, 389], [440, 211], [634,229],[560,292],[818,354], [830, 661], [350, 505], [426, 434], [230, 365], [127, 435]]
   TRACKING_ROI: [[2, 242], [456, 150], [819, 189],[842, 716], [437, 716], [1, 720]]
   MOI1: [[602,204],[159,497]]
   MOI2: [[552,313 ],[821,370 ]]
@@ -28,10 +28,10 @@ CAM:
   MAX_AGE: 3
   N_INIT: 1
   THRESHOLD_AREA: 0.4
-  FRAME_MOI1: 3 
-  FRAME_MOI2: 13
-  FRAME_MOI3: 3
-  FRAME_MOI4: 5
-  FRAME_MOI5: 3
-  FRAME_MOI6: 3
-  FRAME_MOI: [3,13,3,5,3,3]
+  FRAME_MOI1: 0 
+  FRAME_MOI2: 0
+  FRAME_MOI3: 0
+  FRAME_MOI4: 0
+  FRAME_MOI5: 0
+  FRAME_MOI6: 0
+  FRAME_MOI: [0,0,0,0,0,0]
