--- a/configs/cam9.yaml
+++ b/configs/cam9.yaml
@@ -2,7 +2,7 @@ CAM:
   NAME: "CAM_09"
   NUMBER_MOI: 1
   ROI_BTC: [[238, 454], [694, 284], [1156, 306], [1262, 621]]
-  ROI_DEFAULT: [[205, 445], [576,298], [1173, 350], [1262, 621]]
+  ROI_DEFAULT: [[87,425], [498,290], [1173, 350], [1262, 621]]
   TRACKING_ROI: [[238, 454], [721, 251], [1160, 278],[1262, 621]]
   MOI1: [[655, 575], [943, 274]]
   MOI: [[[655, 575], [943, 274]]]
