--- a/configs/cam25.yaml
+++ b/configs/cam25.yaml
@@ -2,7 +2,7 @@ CAM:
     NAME: "CAM_25"
     NUMBER_MOI: 2
     ROI_BTC: [[207, 418], [803, 283], [1153, 368], [1090, 690]]
-    ROI_DEFAULT: [[365,379], [728,294], [1144, 407], [1105,598]]
+    ROI_DEFAULT: [[553,336], [728,294], [1144, 407], [1105,598],[693,450],[800,405]]
     TRACKING_ROI: [[207, 418], [803, 283],[961,321],[1005,277],[1158,308], [1153, 368], [1090, 690],[583,536],[250,720],[0,720],[2,492]]
     MOI1: [[922, 309], [309, 503]]
     MOI2: [[813,  628], [1057, 330]]
