--- a/configs/cam25.yaml
+++ b/configs/cam25.yaml
@@ -2,26 +2,23 @@ CAM:
     NAME: "CAM_25"
     NUMBER_MOI: 2
     ROI_BTC: [[207, 418], [803, 283], [1153, 368], [1090, 690]]
-    ROI_DEFAULT: [[365,379], [728,294], [1144, 407], [1105,598]]
+    ROI_DEFAULT: [[553,336], [728,294], [1144, 407], [1105,598],[693,450],[800,405]]
     TRACKING_ROI: [[207, 418], [803, 283],[961,321],[1005,277],[1158,308], [1153, 368], [1090, 690],[583,536],[250,720],[0,720],[2,492]]
     MOI1: [[922, 309], [309, 503]]
     MOI2: [[813,  628], [1057, 330]]
     MOI: [[[922, 309], [309, 503]],[[813,  628], [1057, 330]] ]
-    
     LINE1: [[389,373], [693,464]]
     LINE2: [[904,359], [1143,422]]
     LINE: [[[389,373], [693,464]],[[904,359], [1143,422]]]
-    
     # for kalman filter - kalman_filter.py
     _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
     _STD_WEIGHT_VELOCITY: 100         # inverse of _std_weight_velocity
-  
     # config for tracker - tracker.py
     MAX_IOU_DISTANCE: 0.85
     MAX_AGE: 3
     N_INIT: 1
     THRESHOLD_AREA: 0.3
     #MOI2 +4
-    FRAME_MOI1: 6
+    FRAME_MOI1: 12
     FRAME_MOI2: 10
-    FRAME_MOI: [6,10]
+    FRAME_MOI: [12,10]  
