--- a/configs/cam18.yaml
+++ b/configs/cam18.yaml
@@ -27,3 +27,6 @@ CAM:
   FRAME_MOI1: 5
   FRAME_MOI2: 11
   FRAME_MOI: [5,11]
+
+  # distance for auto estimate frame
+  DISTANCE_ROI: [100.50321, 250.56977]
