--- a/configs/cam19.yaml
+++ b/configs/cam19.yaml
@@ -2,7 +2,7 @@ CAM:
   NAME: "CAM_19"
   NUMBER_MOI: 2
   ROI_BTC: [[131, 307], [605, 148], [941, 249], [885, 691]]
-  ROI_DEFAULT: [[390,220], [605, 148], [751,192],[707,231],[932,310], [885, 691],[444,466],[613,320]]
+  ROI_DEFAULT: [[256,260], [605, 148], [751,192],[707,231],[932,310], [885, 691],[444,466],[522,386]]
   TRACKING_ROI: [[54, 344], [540,180], [711,246], [810,167], [916,197], [941,249],[885,691],[414,451],[341,508]]
   MOI1: [[731,168],[205,424]]
   MOI2: [[526,566],[842,199]]
@@ -24,6 +24,15 @@ CAM:
   # for counting base on area intersect
   THRESHOLD_AREA: 0.35
   #MOI2 +5 MOi2 +2
-  FRAME_MOI1: 10
-  FRAME_MOI2: 19
-  FRAME_MOI: [10,19]
+  FRAME_MOI1: 5
+  FRAME_MOI2: 11
+  FRAME_MOI: [5,11]
+
+  # distance for auto estimate frame
+  
+
+  TEST1: [[256,260],[389,216],[590,315],[522,386]]
+  TEST2: [[546,167],[605, 148], [751,192],[707,231]]
+  TEST3: [[659,284],[707,231],[930,306],[926,371]]
+  TEST4: [[444,466],[522,386],[898,563],[885, 691]]
+  TEST: [[[256,260],[389,216],[590,315],[522,386]],[[546,167],[605, 148], [751,192],[707,231]],[[659,284],[707,231],[930,306],[926,371]],[[444,466],[522,386],[898,563],[885, 691]]]
