--- a/configs/cam5.yaml
+++ b/configs/cam5.yaml
@@ -28,3 +28,8 @@ CAM:
     FRAME_MOI: [8, 29]
     # distance for auto estimate frame
     DISTANCE_ROI: [200,2550]
+    TEST1: [[138, 430],[187,415],[540,414],[530, 430]]
+    TEST2: [[239,369],[295,325],[575,322],[551,373]]
+    TEST3: [[575,322],[551,373],[801,324],[817,377]]
+    TEST4: [[519,475],[488,556],[844,468],[862,549]]
+    TEST: [[[138, 430],[187,415],[540,414],[530, 430]],[[239,369],[295,325],[575,322],[551,373]],[[575,322],[551,373],[801,324],[817,377]],[[519,475],[488,556],[844,468],[862,549]]]
