--- a/configs/cam6.yaml
+++ b/configs/cam6.yaml
@@ -26,3 +26,10 @@ CAM:
   # distance for auto estimate frame
   DISTANCE_ROI: [30,490]
   
+  TEST1: [[102,375],[176,317],[628,324],[632,392]]
+  TEST2: [[271,262],[355,207],[632,210],[630,272]]
+  TEST3: [[632,210],[630,272],[889,211],[971,272]]
+  TEST4: [[1225,465],[632,392],[1131,392],[1225,465]]
+  TEST: [[[102,375],[176,317],[628,324],[632,392]],[[271,262],[355,207],[632,210],[630,272]],[[632,210],[630,272],[889,211],[971,272]],[[1225,465],[632,392],[1131,392],[1225,465]]]
+
+  
