--- a/configs/cam1.yaml
+++ b/configs/cam1.yaml
@@ -28,3 +28,8 @@ CAM:
   
   # distance for auto estimate frame
   DISTANCE_ROI: [40,250]
+  TEST1: [[36,309],[70,275],[616,294],[602,330]]
+  TEST2: [[128,235],[150,202],[605,227],[604,258]]
+  TEST3: [[616,294],[602,330],[1056,297],[1100,334]]
+  TEST4: [[607,400],[611,403],[1195,404],[1275,466]]
+  TEST: [[[36,309],[70,275],[616,294],[602,330]],[[128,235],[150,202],[605,227],[604,258]],[[616,294],[602,330],[1056,297],[1100,334]],[[607,400],[611,403],[1195,404],[1275,466]]]
