--- a/configs/cam18.yaml
+++ b/configs/cam18.yaml
@@ -30,3 +30,8 @@ CAM:
 
   # distance for auto estimate frame
   DISTANCE_ROI: [45,285]
+  TEST1: [[256,260],[389,216],[590,315],[522,386]]
+  TEST2: [[546,167],[605, 148], [751,192],[707,231]]
+  TEST3: [[659,284],[707,231],[930,306],[926,371]]
+  TEST4: [[444,466],[522,386],[898,563],[885, 691]]
+  TEST: [[[256,260],[389,216],[590,315],[522,386]],[[546,167],[605, 148], [751,192],[707,231]],[[659,284],[707,231],[930,306],[926,371]],[[444,466],[522,386],[898,563],[885, 691]]]
