--- a/configs/cam9.yaml
+++ b/configs/cam9.yaml
@@ -27,3 +27,6 @@ CAM:
   TEST1: [[87,425],[223,378],[1231,531],[1262, 621]]
   TEST2: [[417,310],[498,290], [1173, 350],[1187,392]]
   TEST: [ [[87,425],[223,378],[1231,531],[1262, 621]], [[417,310],[498,290], [1173, 350],[1187,392]]]
+
+  # for ver losstrack-counting
+  D_THRESHOLD: [160]
