update config ROI DF

--- a/configs/cam1.yaml
+++ b/configs/cam1.yaml
@@ -1,8 +1,8 @@
 CAM:
   NAME: "CAM_01"
   NUMBER_MOI: 2
-  ROI_BTC: [[1,341], [150, 210],[963,249],[1278,464], [103,462]]
-  ROI_DEFAULT: [[47,302], [150, 210],[604,229],[603,287],[1038,296],[1278,464],[604,461],[607,400], [602,326]]
+  ROI_BTC: [[1,341], [150, 210],[963,249],[1278,464], [0,462]]
+  ROI_DEFAULT: [[1,341], [150, 210],[963,249],[1278,464], [0,462]]
   TRACKING_ROI: [[2,370], [150, 210],[603,231],[610,200],[941,209], [963, 249], [1278, 464],[592,461],[611,720],[2,720]]
   MOI1: [[347, 210], [196, 548]]
   MOI2: [[850, 512], [736, 220]]
@@ -33,3 +33,5 @@ CAM:
   TEST3: [[616,294],[602,330],[1056,297],[1100,334]]
   TEST4: [[607,400],[611,403],[1195,404],[1275,466]]
   TEST: [[[36,309],[70,275],[616,294],[602,330]],[[128,235],[150,202],[605,227],[604,258]],[[616,294],[602,330],[1056,297],[1100,334]],[[607,400],[611,403],[1195,404],[1275,466]]]
+
+  D_THRESHOLD: [123,104]
