--- a/configs/cam11.yaml
+++ b/configs/cam11.yaml
@@ -1,8 +1,8 @@
 CAM:
   NAME: "CAM_11"
   NUMBER_MOI: 2
-  ROI_BTC: [[250, 586], [430, 359], [800, 362], [982, 574]]
-  ROI_DEFAULT: [[295,527], [430, 359],[594,358],[603,394], [828,392], [982, 574],[661,576],[638,523]]
+  ROI_BTC: [[434,360], [797,363], [982, 574],[249,584]]
+  ROI_DEFAULT: [[434,360], [797,363], [982, 574],[249,584]]
   TRACKING_ROI: [[250, 586], [430, 359],[600,359],[595,315],[777,310], [800, 362], [982, 574],[814,571],[825,716],[218,720]]
   MOI1: [[542, 349], [471, 622]]
   MOI2: [[785, 620], [655, 341]]
