--- a/configs/cam19.yaml
+++ b/configs/cam19.yaml
@@ -2,7 +2,7 @@ CAM:
   NAME: "CAM_19"
   NUMBER_MOI: 2
   ROI_BTC: [[131, 307], [605, 148], [941, 249], [885, 691]]
-  ROI_DEFAULT: [[256,260], [605, 148], [751,192],[707,231],[932,310], [885, 691],[444,466],[522,386]]
+  ROI_DEFAULT: [[131, 307], [605, 148], [941, 249], [885, 691]]
   TRACKING_ROI: [[54, 344], [540,180], [711,246], [810,167], [916,197], [941,249],[885,691],[414,451],[341,508]]
   MOI1: [[731,168],[205,424]]
   MOI2: [[526,566],[842,199]]
