--- a/configs/cam20.yaml
+++ b/configs/cam20.yaml
@@ -2,7 +2,7 @@ CAM:
   NAME: "CAM_20"
   NUMBER_MOI: 6
   ROI_BTC: [[73, 212], [760, 145], [1240, 293], [533, 686]]
-  ROI_DEFAULT: [[186,197],[360,183], [554,264], [866,179],[1149,262],[533, 686]]
+  ROI_DEFAULT: [[73, 212], [760, 145], [1240, 293], [533, 686]]
   TRACKING_ROI: [[3, 116], [761, 107], [1273, 240],[1276, 393], [825, 716], [319, 716], [4, 344]]
   MOI1: [[336  ,173],[1149 ,515 ]]
   MOI2: [[1230 ,380],[498 ,147  ]]
