--- a/configs/cam21.yaml
+++ b/configs/cam21.yaml
@@ -1,8 +1,8 @@
 CAM:
   NAME: "CAM_21"
   NUMBER_MOI: 6
-  ROI_BTC: [[102,346], [440, 211], [814, 252], [830, 661],[75,410],[6,429],[2,344],[73,325]]
-  ROI_DEFAULT: [[6, 389], [440, 211], [634,229],[560,292],[818,354], [830, 661]]
+  ROI_BTC: [[5,388], [440, 211], [814, 252], [830, 661]]
+  ROI_DEFAULT: [[5,388], [440, 211], [814, 252], [830, 661]]
   TRACKING_ROI: [[2, 242], [456, 150], [819, 189],[842, 716], [437, 716], [1, 720]]
   MOI1: [[602,204],[159,497]]
   MOI2: [[552,313 ],[821,370 ]]
