--- a/configs/cam7.yaml
+++ b/configs/cam7.yaml
@@ -3,7 +3,7 @@ CAM:
   NUMBER_MOI: 2
   
   ROI_BTC: [[20,433],[324,219],[968,226],[1270,452]]
-  ROI_DEFAULT: [[83,390], [322, 218],[632,219],[630,265], [1022,265], [1266, 448],[609,445],[612,392]]
+  ROI_DEFAULT: [[20,433],[324,219],[968,226],[1270,452]]
   TRACKING_ROI: [[19, 431], [322, 218],[627,218],[640,150],[930,152], [968, 224], [1266, 448],[623,443],[615,720],[7,720]]
   MOI1: [[491, 197], [308, 478]]
   MOI2: [[961, 480], [784, 204]]
