--- a/configs/cam12.yaml
+++ b/configs/cam12.yaml
@@ -2,7 +2,7 @@ CAM:
   NAME: "CAM_12"
   NUMBER_MOI: 1
   ROI_BTC: [[134, 596], [650, 355], [1211, 431], [1199, 719]]
-  ROI_DEFAULT: [[134, 596], [538,381], [1200, 486], [1199, 719]]
+  ROI_DEFAULT: [[134, 596], [650, 355], [1211, 431], [1199, 719]]
   TRACKING_ROI : [[134, 596], [652, 302], [1215, 379],[1199, 719]]
   MOI1: [[615, 706], [850, 368]]
   MOI: [[[615, 706], [850, 368]]]
