--- a/configs/cam16.yaml
+++ b/configs/cam16.yaml
@@ -1,8 +1,8 @@
 CAM:
   NAME: "CAM_16"
   NUMBER_MOI: 3
-  ROI_BTC: [[46, 190], [521, 144], [1156, 454], [128, 636]]
-  ROI_DEFAULT: [[110,523], [72,309],[273,288],[159,181],[443,154],[593,241],[656,212],[1014,388]]
+  ROI_BTC: [[129,637], [47,191], [522,147], [1158, 457]]
+  ROI_DEFAULT: [[129,637], [47,191], [522,147], [1158, 457]]
   TRACKING_ROI: [[2, 165], [561, 108], [1278, 371],[1278, 720], [202, 719]]
   MOI1: [[155,166],[596,621]]
   MOI2: [[221,162],[679,209]]
