--- a/configs/cam3.yaml
+++ b/configs/cam3.yaml
@@ -1,8 +1,8 @@
 CAM:
   NAME: "CAM_03"
   NUMBER_MOI: 2
-  ROI_BTC: [[1,341], [150, 210],[963,249],[1278,464], [103,462]]
-  ROI_DEFAULT: [[47,302], [150, 210],[604,229],[603,287],[1038,296],[1278,464],[604,461],[607,400], [602,326]]
+  ROI_BTC: [[1,341], [150, 210],[963,249],[1278,464], [0,462]]
+  ROI_DEFAULT: [[1,341], [150, 210],[963,249],[1278,464], [0,462]]
   TRACKING_ROI: [[2,370], [150, 210],[603,231],[610,200],[941,209], [963, 249], [1278, 464],[592,461],[611,720],[2,720]]
   MOI1: [[347, 210], [196, 548]]
   MOI2: [[850, 512], [736, 220]]
@@ -22,11 +22,12 @@ CAM:
   N_INIT: 1
   THRESHOLD_AREA: 0.4
   # MOI1 +1 MOI2 +2
-  FRAME_MOI1: 15
-  FRAME_MOI2: 29
-  FRAME_MOI: [15,29]
+  FRAME_MOI1: 9
+  FRAME_MOI2: 16
+  FRAME_MOI: [9,16]
+  
   # distance for auto estimate frame
-  DISTANCE_ROI: [100,410]
+  DISTANCE_ROI: [40,250]
   TEST1: [[36,309],[70,275],[616,294],[602,330]]
   TEST2: [[128,235],[150,202],[605,227],[604,258]]
   TEST3: [[616,294],[602,330],[1056,297],[1100,334]]
