--- a/configs/cam6.yaml
+++ b/configs/cam6.yaml
@@ -2,7 +2,7 @@ CAM:
   NAME: "CAM_06"
   NUMBER_MOI: 2
   ROI_BTC: [[7,441],[439,150],[812,153],[1225,465]]
-  ROI_DEFAULT: [[102,375],[355,207],[889,211],[1225,465],[619,453],[632,392]]
+  ROI_DEFAULT: [[7,441],[439,150],[812,153],[1225,465]]
   TRACKING_ROI: [[10, 437], [437, 150],[630,170],[633,133],[781,134], [810, 150], [1223, 464],[631,451],[625,720],[6,720]]
   MOI1: [[549, 144], [297, 505]]
   MOI2: [[925, 487], [715, 144]]
