--- a/configs/cam16.yaml
+++ b/configs/cam16.yaml
@@ -2,17 +2,17 @@ CAM:
   NAME: "CAM_16"
   NUMBER_MOI: 3
   ROI_BTC: [[129,637], [47,191], [522,147], [1158, 457]]
-  ROI_DEFAULT: [[129,637], [47,191], [522,147], [1158, 457]]
+  ROI_DEFAULT: [[129,637], [70, 336], [400, 275], [290, 166], [522,147], [1158, 457]]
   TRACKING_ROI: [[2, 165], [561, 108], [1278, 371],[1278, 720], [202, 719]]
   MOI1: [[155,166],[596,621]]
-  MOI2: [[221,162],[679,209]]
+  MOI2: [[221,162],[626,143]]
   MOI3: [[910,287],[878,619]]
-  MOI: [[[155,166],[596,621]],[[221,162],[679,209]],[[910,287],[878,619]]]
+  MOI: [[[155,166],[596,621]],[[221,162],[626,143]],[[910,287],[878,619]]]
 
-  LINE1: [[91,422],[829,298]]
-  LINE2: [[381,158], [370,216]]
-  LINE3: [[682, 249], [976, 400]]
-  LINE: [[[91,422],[829,298]],[[381,158], [370,216]],[[682, 249], [976, 400]]]
+  LINE1: [[88,432], [632, 309]]
+  LINE2: [[422,155], [547, 230]]
+  LINE3: [[696, 392], [1192, 505]]
+  LINE: [[[88,432], [632, 309]],[[422,155], [547, 230]],[[696, 392], [1192, 505]]]
   
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
@@ -23,7 +23,9 @@ CAM:
   MAX_AGE: 3
   N_INIT: 1
   THRESHOLD_AREA: 0.35
-  FRAME_MOI: 8
-  FRAME_MOI: 16
-  FRAME_MOI: 12
-  FRAME_MOI: [8,16,12]
+  FRAME_MOI: 7
+  FRAME_MOI: 14
+  FRAME_MOI: 10
+  FRAME_MOI: [7,14,10]
+  
+  D_THRESHOLD: [170, 0, 50]
