--- a/configs/cam12.yaml
+++ b/configs/cam12.yaml
@@ -26,3 +26,5 @@ CAM:
   TEST1: [[134, 596],[238,533],[1196,639],[1199, 719]]
   TEST2: [[464,418],[538,381], [1200, 486],[1195,524]]
   TEST: [[[134, 596],[238,533],[1196,639],[1199, 719]],[[464,418],[538,381], [1200, 486],[1195,524]]]
+
+  D_THRESHOLD: [100]
