--- a/configs/cam20.yaml
+++ b/configs/cam20.yaml
@@ -12,13 +12,13 @@ CAM:
   MOI6: [[127,438],[1184,448]]
   MOI: [[[336  ,173],[1149 ,515 ]],[[1230 ,380],[498 ,147  ]],[[1226 ,396],[51,384  ]],[[356,170],[62,405]],[[121,424],[485,151]],[[127,438],[1184,448]]]
 
-  LINE1: [[586,314],[762,275 ]]
-  LINE2: [[717,242],[885,185  ]]
-  LINE3: [[312,338],[422,473  ]]
-  LINE4: [[214,196],[278,289]]
-  LINE5: [[374,200],[495,254]]
-  LINE6: [[730,418],[533, 686]]
-  LINE: [[[586,314],[762,275 ]],[[717,242],[885,185  ]],[[312,338],[422,473  ]],[[214,196],[278,289]],[[374,200],[495,254]],[[730,418],[533, 686]],]
+  LINE1: [[483,370],[767,248]]
+  LINE2: [[907,189],[710,300]]
+  LINE3: [[342,320],[442,520]]
+  LINE4: [[115,225],[239,367]]
+  LINE5: [[304,237],[611,338]]
+  LINE6: [[560,356],[723,720]]
+  LINE: [[[483,370],[767,248]], [[907,189],[710,300]], [[342,320],[442,520]],[[115,225],[239,367]],[[304,237],[611,338]],[[560,356],[723,720]]]
 
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
@@ -36,3 +36,4 @@ CAM:
   FRAME_MOI5: 4
   FRAME_MOI6: 4
   FRAME_MOI: [6,12,5,7,4,4]
+  D_THRESHOLD: [90,90,50,0,0,0,]
