--- a/configs/cam22.yaml
+++ b/configs/cam22.yaml
@@ -12,13 +12,13 @@ CAM:
   MOI6: [[484 ,591 ],[66 ,322 ]]
   MOI: [[[602,204],[159,497]], [[526,591 ],[719 ,214 ]],[[567 ,207 ],[25 ,338 ]],[[33 ,337 ],[722, 231 ]],[[62, 320 ],[68,494  ]],[[484 ,591 ],[66 ,322 ]]]
 
-  LINE1: [[277,345], [461,397]]
-  LINE2: [[578,286], [822,379]]
-  LINE3: [[377,233], [324,283]]
-  LINE4: [[605,225 ],[503,329 ]]
-  LINE5: [[1, 396], [107, 381]]
-  LINE6: [[108,367], [223,323]]
-  LINE: [[[277,345], [461,397]], [[552,313 ],[821,370 ]], [[377,233], [324,283]],[[605,225 ],[503,329 ]],[[1 , 396], [107, 381]],[[108,367], [223,323]]]
+  LINE1: [[268,325], [511,388]]
+  LINE2: [[548,308], [861,371]]
+  LINE3: [[397,193], [484,278]]
+  LINE4: [[365,225 ],[286,349 ]]
+  LINE5: [[0,431], [196,329]]
+  LINE6: [[98,467], [354,308]]
+  LINE: [[[268,325], [511,388]],[[548,308], [861,371]],[[397,193], [484,278]],[[365,225 ],[286,349 ]],[[0,431], [196,329]],[[98,467], [354,308]]]
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
   _STD_WEIGHT_VELOCITY: 100         # inverse of _std_weight_velocity
@@ -35,3 +35,4 @@ CAM:
   FRAME_MOI5: 0
   FRAME_MOI6: 0
   FRAME_MOI: [0,0,0,0,0,0]
+  D_THRESHOLD: [80,80,0,10,0,0]
