--- a/configs/cam10.yaml
+++ b/configs/cam10.yaml
@@ -54,3 +54,4 @@ CAM:
   FRAME_MOI11 : 5
   FRAME_MOI12 : 5 
   FRAME_MOI : [6,24,5,17,6,6,14,8,25,12,5,5]
+  D_THRESHOLD: [60,60,0,50,50,0,10,90,0,50,90,60]
