--- a/configs/cam21.yaml
+++ b/configs/cam21.yaml
@@ -12,13 +12,13 @@ CAM:
   MOI6: [[484 ,591 ],[66 ,322 ]]
   MOI: [[[602,204],[159,497]], [[526,591 ],[719 ,214 ]],[[567 ,207 ],[25 ,338 ]],[[33 ,337 ],[722, 231 ]],[[62, 320 ],[68,494  ]],[[484 ,591 ],[66 ,322 ]]]
 
-  LINE1: [[277,345], [461,397]]
-  LINE2: [[578,286], [822,379]]
-  LINE3: [[377,233], [324,283]]
-  LINE4: [[605,225 ],[503,329 ]]
-  LINE5: [[18, 396], [107, 381]]
-  LINE6: [[108,367], [223,323]]
-  LINE: [[[277,345], [461,397]], [[552,313 ],[821,370 ]], [[377,233], [324,283]],[[605,225 ],[503,329 ]],[[18, 396], [107, 381]],[[108,367], [223,323]]]
+  LINE1: [[268,325], [511,388]]
+  LINE2: [[548,308], [861,371]]
+  LINE3: [[397,193], [484,278]]
+  LINE4: [[365,225 ],[286,349 ]]
+  LINE5: [[0,431], [196,329]]
+  LINE6: [[98,467], [354,308]]
+  LINE: [[[268,325], [511,388]],[[548,308], [861,371]],[[397,193], [484,278]],[[365,225 ],[286,349 ]],[[0,431], [196,329]],[[98,467], [354,308]]]
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
   _STD_WEIGHT_VELOCITY: 100         # inverse of _std_weight_velocity
@@ -28,10 +28,11 @@ CAM:
   MAX_AGE: 3
   N_INIT: 1
   THRESHOLD_AREA: 0.4
-  FRAME_MOI1: 3
-  FRAME_MOI2: 12
-  FRAME_MOI3: 3
-  FRAME_MOI4: 5
-  FRAME_MOI5: 3
-  FRAME_MOI6: 3
-  FRAME_MOI: [3,12,3,5,3,3]
+  FRAME_MOI1: 0 
+  FRAME_MOI2: 0
+  FRAME_MOI3: 0
+  FRAME_MOI4: 0
+  FRAME_MOI5: 0
+  FRAME_MOI6: 0
+  FRAME_MOI: [0,0,0,0,0,0]
+  D_THRESHOLD: [80,80,0,10,0,0]
