update cfg ver16

--- a/configs/cam10.yaml
+++ b/configs/cam10.yaml
@@ -2,7 +2,7 @@ CAM:
   NAME: "CAM_10"
   NUMBER_MOI: 12
   ROI_BTC: [[1, 657], [312,258],[984,254],[1277, 505], [1279, 660]]
-  ROI_DEFAULT: [[1, 657], [312,258],[984,254],[1277, 505], [1279, 660]]
+  ROI_DEFAULT: [[1, 657],[2,487],[117,500],[332,254],[350,196],[475,208],[475,255],[984,254],[1270,613]]
   TRACKING_ROI: [[1, 715], [1, 501], [302, 202], [992, 207],[1278, 435], [1276, 715]]
   MOI1: [[491, 244], [355, 678]]
   MOI2: [[969, 674], [754, 236]]
@@ -18,21 +18,20 @@ CAM:
   MOI12: [[1165, 397], [375, 693]]
   MOI: [[[491, 244], [355, 678]], [[969, 674], [754, 236]], [[455, 238], [193, 325]], [[59, 532], [732, 241]], [[936, 675], [171, 349]], [[77, 499], [214, 697]], [[998, 679], [1178, 394]], [[55, 510], [1178, 388]], [[1147, 365], [775, 243]], [[533, 238], [1156, 381]], [[1164, 370], [179, 335]], [[1165, 397], [375, 693]]]
   
-  LINE1: [[175,531],[656,558]]
-  LINE2: [[665,328],[917,311]]
-  LINE3: [[355,192],[329,341]]
-  LINE4: [[683,307],[316,325]]
-  LINE5: [[419,347],[207,395]]
+  LINE1: [[87,531],[700,558]]
+  LINE2: [[665,328],[1028,285]]
+  LINE3: [[360,206],[303,334]]
+  LINE4: [[526,250],[826,322]]
+  LINE5: [[419,347],[139,475]]
   LINE6: [[14,654],[196,454]]
-  LINE7: [[972,463],[1268,607]]
-  LINE8: [[746,376],[834,499]]
+  LINE7: [[922,432],[1268,607]]
+  LINE8: [[825,331],[938,527]]
   LINE9: [[919,351],[1040,266]]
   LINE10: [[1069,321],[932,416]]
   LINE11: [[656,291],[663,428]]
   LINE12: [[598,471],[946,619]]
 
-  LINE: [[[175,531],[656,558]],[[665,328],[917,311]],[[355,192],[329,341]],[[683,307],[316,325]], [[419,347],[207,395]],[[14,654],[196,454]],[[972,463],[1268,607]], [[746,376],[834,499]],[[919,351],[1040,266]], [[1069,321],[932,416]], [[656,291],[663,428]],[[598,471],[946,619]]]
-  
+  LINE: [[[87,531],[700,558]],[[665,328],[1028,285]],[[360,206],[303,334]],[[526,250],[826,322]],[[419,347],[139,475]],[[14,654],[196,454]],[[922,432],[1268,607]],[[825,331],[938,527]],[[919,351],[1040,266]],[[1069,321],[932,416]],[[656,291],[663,428]],[[598,471],[946,619]]]
     # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
   _STD_WEIGHT_VELOCITY: 100         # inverse of _std_weight_velocity
@@ -54,4 +53,4 @@ CAM:
   FRAME_MOI11 : 5
   FRAME_MOI12 : 5 
   FRAME_MOI : [6,24,5,17,6,6,14,8,25,12,5,5]
-  D_THRESHOLD: [60,60,0,50,50,0,10,90,0,50,90,60]
+  D_THRESHOLD: [60,60,10,50,50,10,10,90,10,50,90,60]
