--- a/configs/cam12.yaml
+++ b/configs/cam12.yaml
@@ -5,7 +5,9 @@ CAM:
   ROI_DEFAULT: [[134, 596], [650, 355], [1211, 431], [1199, 719]]
   TRACKING_ROI : [[134, 596], [652, 302], [1215, 379],[1199, 719]]
   MOI1: [[615, 706], [850, 368]]
-  MOI: [[[615, 706], [850, 368]]]
+  MOI2: [[440, 500], [580, 527]]
+  MOI3: [[1140, 610], [874, 578]]
+  MOI: [[[615, 706], [850, 368]], [[440, 500], [580, 527]], [[1140, 610], [874, 578]]]
   LINE1: [[521,398], [1200, 506]]
   LINE: [[[521,398], [1200, 506]]]
   
