--- a/configs/cam15.yaml
+++ b/configs/cam15.yaml
@@ -1,8 +1,8 @@
 CAM:
   NAME: "CAM_15"
   NUMBER_MOI: 6
-  ROI_BTC: [[11, 466], [306, 213], [950, 180], [1272, 417]]
-  ROI_DEFAULT: [[11, 466], [306, 213], [950, 180], [1272, 417]]
+  ROI_BTC: [[11, 461], [306, 213], [950, 180], [1272, 417]]
+  ROI_DEFAULT: [[11, 461], [306, 213], [950, 180], [1272, 417]]
   TRACKING_ROI: [[3, 442], [313, 170], [991, 124],[1276, 333], [1277, 557], [1, 720]]
   MOI1: [[424, 201], [274, 485]]
   MOI2: [[827, 508], [628, 178]]
@@ -13,12 +13,12 @@ CAM:
   MOI: [[[424, 201], [274, 485]], [[827, 508], [628, 178]], [[1175, 247], [644, 175]], [[1175, 254], [205, 519]], [[1101, 554], [1179, 277]], [[414, 195], [1165, 266]]]
 
   LINE1: [[70, 421], [552, 406]]
-  LINE2: [[555, 317], [932, 285]]
+  LINE2: [[555, 317], [970, 285]]
   LINE3: [[906, 185], [871, 250]]
-  LINE4: [[553,325], [936,425]]
-  LINE5: [[1080,287], [1258, 452]]
-  LINE6: [[522,203], [550, 326]]
-  LINE: [[[70, 421], [552, 406]],[[555, 317], [932, 285]],[[906, 185], [871, 250]],[[553,325], [936,425]],[[1080,287], [1258, 452]],[[522,203], [550, 326]]]
+  LINE4: [[553,325], [1100,450]]
+  LINE5: [[1025,235], [1270, 458]]
+  LINE6: [[535, 177], [535, 360]]
+  LINE: [[[70, 421], [552, 406]], [[555, 317], [970, 285]], [[906, 185], [871, 250]], [[553,325], [1100,450]], [[1025,235], [1270, 458]], [[535, 177], [535, 360]]]
 
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
@@ -29,10 +29,12 @@ CAM:
   MAX_AGE: 3
   N_INIT: 1
   THRESHOLD_AREA: 0.25
-  FRAME_MOI1: 4 
-  FRAME_MOI2: 25
-  FRAME_MOI3: 41
-  FRAME_MOI4: 10
-  FRAME_MOI5: 4
+  FRAME_MOI1: 5 
+  FRAME_MOI2: 17
+  FRAME_MOI3: 36
+  FRAME_MOI4: 17
+  FRAME_MOI5: 5
   FRAME_MOI6: 10
-  FRAME_MOI: [4,25,41,10,4,10]
+  FRAME_MOI: [5,17,36,17,5,10]
+  
+  D_THRESHOLD: [100, 80, 10, 50, 10, 100]
