--- a/configs/cam20.yaml
+++ b/configs/cam20.yaml
@@ -2,7 +2,7 @@ CAM:
   NAME: "CAM_20"
   NUMBER_MOI: 6
   ROI_BTC: [[73, 212], [760, 145], [1240, 293], [533, 686]]
-  ROI_DEFAULT: [[73, 212], [760, 145], [1240, 293], [533, 686]]
+  ROI_DEFAULT: [[73, 212], [760, 145], [1240, 293], [700, 590], [639, 715], [300, 710], [367, 511]]
   TRACKING_ROI: [[3, 116], [761, 107], [1273, 240],[1276, 393], [825, 716], [319, 716], [4, 344]]
   MOI1: [[336  ,173],[1149 ,515 ]]
   MOI2: [[1230 ,380],[498 ,147  ]]
@@ -12,13 +12,13 @@ CAM:
   MOI6: [[127,438],[1184,448]]
   MOI: [[[336  ,173],[1149 ,515 ]],[[1230 ,380],[498 ,147  ]],[[1226 ,396],[51,384  ]],[[356,170],[62,405]],[[121,424],[485,151]],[[127,438],[1184,448]]]
 
-  LINE1: [[483,370],[767,248]]
+  LINE1: [[1022,255],[611,338]]
   LINE2: [[907,189],[710,300]]
   LINE3: [[342,320],[442,520]]
-  LINE4: [[115,225],[239,367]]
-  LINE5: [[304,237],[611,338]]
+  LINE4: [[270, 180],[220,366]]
+  LINE5: [[334,246],[611,338]]
   LINE6: [[560,356],[723,720]]
-  LINE: [[[483,370],[767,248]], [[907,189],[710,300]], [[342,320],[442,520]],[[115,225],[239,367]],[[304,237],[611,338]],[[560,356],[723,720]]]
+  LINE: [[[1022,255],[611,338]], [[907,189],[710,300]], [[342,320],[442,520]],[[270, 180],[220,366]],[[334,246],[611,338]],[[560,356],[723,720]]]
 
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
@@ -36,4 +36,4 @@ CAM:
   FRAME_MOI5: 4
   FRAME_MOI6: 4
   FRAME_MOI: [6,12,5,7,4,4]
-  D_THRESHOLD: [90,90,50,0,0,0,]
+  D_THRESHOLD: [50,90,50,10,10,10]
