update cfg ver16

--- a/configs/cam13.yaml
+++ b/configs/cam13.yaml
@@ -22,3 +22,7 @@ CAM:
   FRAME_MOI2: 30
   FRAME_MOI: [11,30]
   D_THRESHOLD: [60,60]
+
+  TEST1 : [[8, 339], [341, 166],[631,165],[631,328]]
+  TEST2 : [[631,328],[631,165], [1008, 169], [1272, 312]]
+  TEST: [ [[8, 339], [341, 166],[631,165],[631,328]], [[631,328],[631,165], [1008, 169], [1272, 312]]]
