--- a/configs/cam16.yaml
+++ b/configs/cam16.yaml
@@ -29,3 +29,9 @@ CAM:
   FRAME_MOI: [7,14,10]
   
   D_THRESHOLD: [170, 0, 50]
+
+  TEST1 : [[129,630],[48,189],[398,158],[926,493]]
+  TEST2 : [[172,182],[421,157],[552,155],[709,237]]
+  TEST3 : [[738,529],[660,430],[719,231],[1156,455]]
+
+  TEST: [ [[129,630],[48,189],[398,158],[926,493]], [[172,182],[421,157],[552,155],[709,237]], [[738,529],[660,430],[719,231],[1156,455]]]
