--- a/configs/cam19.yaml
+++ b/configs/cam19.yaml
@@ -31,9 +31,8 @@ CAM:
   # distance for auto estimate frame
   
 
-  TEST1: [[256,260],[389,216],[590,315],[522,386]]
-  TEST2: [[546,167],[605, 148], [751,192],[707,231]]
-  TEST3: [[659,284],[707,231],[930,306],[926,371]]
-  TEST4: [[444,466],[522,386],[898,563],[885, 691]]
-  TEST: [[[256,260],[389,216],[590,315],[522,386]],[[546,167],[605, 148], [751,192],[707,231]],[[659,284],[707,231],[930,306],[926,371]],[[444,466],[522,386],[898,563],[885, 691]]]
+  TEST1 : [[131, 307], [605, 148],[770,198],[404,447]]
+  TEST2 : [[404,447],[770,198],[941, 249], [885, 691]]
+  TEST: [[[131, 307], [605, 148],[770,198],[404,447]], [[404,447],[770,198],[941, 249], [885, 691]]]
+
   D_THRESHOLD: [120,120]
