--- a/configs/cam6.yaml
+++ b/configs/cam6.yaml
@@ -26,10 +26,7 @@ CAM:
   # distance for auto estimate frame
   DISTANCE_ROI: [30,490]
   
-  TEST1: [[102,375],[176,317],[628,324],[632,392]]
-  TEST2: [[271,262],[355,207],[632,210],[630,272]]
-  TEST3: [[632,210],[630,272],[889,211],[971,272]]
-  TEST4: [[1225,465],[632,392],[1131,392],[1225,465]]
-  TEST: [[[102,375],[176,317],[628,324],[632,392]],[[271,262],[355,207],[632,210],[630,272]],[[632,210],[630,272],[889,211],[971,272]],[[1225,465],[632,392],[1131,392],[1225,465]]]
-
+  TEST1 : [[11,439],[440,148],[628,150],[612,451]]
+  TEST2 : [[612,451],[628,150],[813,152],[1224,466]]
+  TEST: [[[11,439],[440,148],[628,150],[612,451]], [[612,451],[628,150],[813,152],[1224,466]]]
   D_THRESHOLD: [120,120]
