--- a/configs/cam7.yaml
+++ b/configs/cam7.yaml
@@ -28,11 +28,8 @@ CAM:
   # distance for auto estimate frame
   DISTANCE_ROI: [30,530]
 
-  TEST1: [[83,390],[166,332],[630,339],[612,392]]
-  TEST2: [[269,258],[322, 218],[641,220],[644,268]]
-  TEST3: [[641,220],[644,268],[970,224],[1036,270]]
-  TEST4: [[619,440],[612,392],[1190,391],[1266,500]]
-  TEST: [[[83,390],[166,332],[630,339],[612,392]],[[269,258],[322, 218],[641,220],[644,268]],[[641,220],[644,268],[970,224],[1036,270]],[[619,440],[612,392],[1190,391],[1266,500]]]
-  
+  TEST1 : [[22,431],[326,218],[635,221],[613,441]]
+  TEST2 : [[613,441],[635,221],[968,224],[1267,450]]
+  TEST: [ [[22,431],[326,218],[635,221],[613,441]], [[613,441],[635,221],[968,224],[1267,450]]]
   D_THRESHOLD: [50,50]
   
