--- a/configs/cam8.yaml
+++ b/configs/cam8.yaml
@@ -26,10 +26,8 @@ CAM:
   FRAME_MOI: [11,11]
   # distance for auto estimate frame
   DISTANCE_ROI: [100,355]
-  TEST1: [[205,310],[247,269],[630,279],[626,314]]
-  TEST2: [[287,242],[322, 218],[632,219],[630,265]]
-  TEST3: [[630,293],[630,265],[1022,265],[1073,302]]
-  TEST4: [[609,445],[625,371],[1184,387],[1267,450]]
-  TEST: [[[205,310],[247,269],[630,279],[626,314]],[[287,242],[322, 218],[632,219],[630,265]],[[630,293],[630,265],[1022,265],[1073,302]], [[609,445],[625,371],[1184,387],[1267,450]]]
-
+  TEST1 : [[22,431],[326,218],[635,221],[613,441]]
+  TEST2 : [[613,441],[635,221],[968,224],[1267,450]]
+  TEST: [ [[22,431],[326,218],[635,221],[613,441]], [[613,441],[635,221],[968,224],[1267,450]]]
+  
   D_THRESHOLD: [50,50]
