--- a/configs/cam11.yaml
+++ b/configs/cam11.yaml
@@ -25,10 +25,7 @@ CAM:
   FRAME_MOI: [12,15]
   # distance for auto estimate frame
   DISTANCE_ROI: [15,170]
-  TEST1: [[295,527],[337,479],[620,475],[638,523]]
-  TEST2: [[409,392],[430, 359],[594,358],[603,394]]
-  TEST3: [[610,437],[603,394],[825,390],[859,430]]
-  TEST4: [[661,576],[638,523],[939,523],[982, 574]]
-  TEST: [[[295,527],[337,479],[620,475],[638,523]],[[409,392],[430, 359],[594,358],[603,394]],[[610,437],[603,394],[825,390],[859,430]],[[661,576],[638,523],[939,523],[982, 574]]]
-
+  TEST1 : [[253,583],[435,359],[600,358],[617,578]]
+  TEST2: [[617,578],[600,358],[796,361],[983,573]]
+  TEST: [[[253,583],[435,359],[600,358],[617,578]],  [[617,578],[600,358],[796,361],[983,573]]]
   D_THRESHOLD: [94,103]
