--- a/configs/cam12.yaml
+++ b/configs/cam12.yaml
@@ -25,8 +25,6 @@ CAM:
   FRAME_MOI: [12]
   # distance for auto estimate frame
   DISTANCE_ROI: [150]
-  TEST1: [[134, 596],[238,533],[1196,639],[1199, 719]]
-  TEST2: [[464,418],[538,381], [1200, 486],[1195,524]]
-  TEST: [[[134, 596],[238,533],[1196,639],[1199, 719]],[[464,418],[538,381], [1200, 486],[1195,524]]]
-
+  TEST1 : [[134, 596], [650, 355], [1211, 431], [1199, 719]]
+  TEST : [[[134, 596], [650, 355], [1211, 431], [1199, 719]]]
   D_THRESHOLD: [70]
