--- a/configs/cam21.yaml
+++ b/configs/cam21.yaml
@@ -36,3 +36,12 @@ CAM:
   FRAME_MOI6: 0
   FRAME_MOI: [0,0,0,0,0,0]
   D_THRESHOLD: [20,20,20,20,20,20]
+
+  TEST1 : [[365,506],[628,231],[813,252],[830,654]]
+  TEST2 : [[86,414],[475,213],[623,230],[355,500]]
+  TEST3 : [[175,322],[443,209],[583,220],[417,319]]
+  TEST4 : [[67,364],[337,251],[570,227],[815,255]]
+  TEST5 : [[2,594],[0,365],[139,365],[79,594]]
+  TEST6 : [[0,720],[0,393],[173,320],[504,544],[335,720]]
+
+  TEST: [[[365,506],[628,231],[813,252],[830,654]], [[86,414],[475,213],[623,230],[355,500]], [[175,322],[443,209],[583,220],[417,319]], [[67,364],[337,251],[570,227],[815,255]], [[2,594],[0,365],[139,365],[79,594]], [[0,720],[0,393],[173,320],[504,544],[335,720]]]
