--- a/configs/cam24.yaml
+++ b/configs/cam24.yaml
@@ -27,9 +27,7 @@ CAM:
     FRAME_MOI: [5,13]
     # distance for auto estimate frame
     DISTANCE_ROI: [60,260]
-    TEST1: [[564,336],[633,319],[849,378],[779,404]]
-    TEST2: [[677,308],[733,291],[918,344],[877,365]]
-    TEST3: [[870,368],[924,344],[1145,407],[1137,447]]
-    TEST4: [[670,472],[786,424],[1120,513],[1102,593]]
-    TEST: [[[564,336],[633,319],[849,378],[779,404]],[[677,308],[733,291],[918,344],[877,365]],[[870,368],[924,344],[1145,407],[1137,447]],[[670,472],[786,424],[1120,513],[1102,593]]]
+    TEST1 : [[207, 418], [803, 283],[966,322],[562,522]]
+    TEST2 : [[562,522],[966,322],[1153, 368], [1090, 690]]
+    TEST: [[[207, 418], [803, 283],[966,322],[562,522]], [[562,522],[966,322],[1153, 368], [1090, 690]]]
     D_THRESHOLD: [100,100]
