--- a/configs/cam4.yaml
+++ b/configs/cam4.yaml
@@ -30,10 +30,7 @@ CAM:
     
     #distance for auto estimate frame
     DISTANCE_ROI: [200,2550]
-    TEST1: [[138, 430],[187,415],[540,414],[530, 430]]
-    TEST2: [[239,369],[295,325],[575,322],[551,373]]
-    TEST3: [[575,322],[551,373],[801,324],[817,377]]
-    TEST4: [[519,475],[488,556],[844,468],[862,549]]
-    TEST: [[[138, 430],[187,415],[540,414],[530, 430]],[[239,369],[295,325],[575,322],[551,373]],[[575,322],[551,373],[801,324],[817,377]],[[519,475],[488,556],[844,468],[862,549]]]
-
+    TEST1 : [[0,720],[0,565],[483,168],[611,168],[409,717]]
+    TEST2 : [[409,717],[611,168],[756,163],[908,720]]
+    TEST: [[[0,720],[0,565],[483,168],[611,168],[409,717]], [[409,717],[611,168],[756,163],[908,720]]]
     D_THRESHOLD: [211,186]
