--- a/configs/cam9.yaml
+++ b/configs/cam9.yaml
@@ -24,5 +24,8 @@ CAM:
   # distance for auto estimate frame
   DISTANCE_ROI: [260]
   TEST1 : [[238, 454], [694, 284], [1156, 306], [1262, 621]]
-  TEST: [[[238, 454], [694, 284], [1156, 306], [1262, 621]]]
+  ROI_SPLIT_REGION: [[[238, 454], [694, 284], [1156, 306], [1262, 621]]]
   D_THRESHOLD: [90]
+
+  # point-in-moi-region threshold
+  PIM_THRESHOLD: 0.1
