update config ROI_SPLIT_REGION

--- a/configs/cam12.yaml
+++ b/configs/cam12.yaml
@@ -26,5 +26,5 @@ CAM:
   # distance for auto estimate frame
   DISTANCE_ROI: [150]
   TEST1 : [[134, 596], [650, 355], [1211, 431], [1199, 719]]
-  TEST : [[[134, 596], [650, 355], [1211, 431], [1199, 719]]]
+  ROI_SPLIT_REGION : [[[134, 596], [650, 355], [1211, 431], [1199, 719]]]
   D_THRESHOLD: [70]
