--- a/configs/cam13.yaml
+++ b/configs/cam13.yaml
@@ -25,4 +25,4 @@ CAM:
 
   TEST1 : [[8, 339], [341, 166],[631,165],[631,328]]
   TEST2 : [[631,328],[631,165], [1008, 169], [1272, 312]]
-  TEST: [ [[8, 339], [341, 166],[631,165],[631,328]], [[631,328],[631,165], [1008, 169], [1272, 312]]]
+  ROI_SPLIT_REGION: [ [[8, 339], [341, 166],[631,165],[631,328]], [[631,328],[631,165], [1008, 169], [1272, 312]]]
