--- a/configs/cam19.yaml
+++ b/configs/cam19.yaml
@@ -33,6 +33,6 @@ CAM:
 
   TEST1 : [[131, 307], [605, 148],[770,198],[404,447]]
   TEST2 : [[404,447],[770,198],[941, 249], [885, 691]]
-  TEST: [[[131, 307], [605, 148],[770,198],[404,447]], [[404,447],[770,198],[941, 249], [885, 691]]]
+  ROI_SPLIT_REGION: [[[131, 307], [605, 148],[770,198],[404,447]], [[404,447],[770,198],[941, 249], [885, 691]]]
 
   D_THRESHOLD: [120,120]
