--- a/configs/cam25.yaml
+++ b/configs/cam25.yaml
@@ -27,5 +27,5 @@ CAM:
     
     TEST1 : [[207, 418], [803, 283],[966,322],[562,522]]
     TEST2 : [[562,522],[966,322],[1153, 368], [1090, 690]]
-    TEST: [[[207, 418], [803, 283],[966,322],[562,522]], [[562,522],[966,322],[1153, 368], [1090, 690]]]
+    ROI_SPLIT_REGION: [[[207, 418], [803, 283],[966,322],[562,522]], [[562,522],[966,322],[1153, 368], [1090, 690]]]
     D_THRESHOLD: [150,90]
