--- a/configs/cam7.yaml
+++ b/configs/cam7.yaml
@@ -30,6 +30,6 @@ CAM:
 
   TEST1 : [[22,431],[326,218],[635,221],[613,441]]
   TEST2 : [[613,441],[635,221],[968,224],[1267,450]]
-  TEST: [ [[22,431],[326,218],[635,221],[613,441]], [[613,441],[635,221],[968,224],[1267,450]]]
+  ROI_SPLIT_REGION: [ [[22,431],[326,218],[635,221],[613,441]], [[613,441],[635,221],[968,224],[1267,450]]]
   D_THRESHOLD: [50,50]
   
