--- a/configs/cam18.yaml
+++ b/configs/cam18.yaml
@@ -32,5 +32,5 @@ CAM:
   DISTANCE_ROI: [45,285]
   TEST1 : [[131, 307], [605, 148],[770,198],[404,447]]
   TEST2 : [[404,447],[770,198],[941, 249], [885, 691]]
-  TEST: [[[131, 307], [605, 148],[770,198],[404,447]], [[404,447],[770,198],[941, 249], [885, 691]]]
+  ROI_SPLIT_REGION: [[[131, 307], [605, 148],[770,198],[404,447]], [[404,447],[770,198],[941, 249], [885, 691]]]
   D_THRESHOLD: [140,140]
